Fixed too high overflow-x on mobile

--- a/JobScraper.Web/wwwroot/app.css
+++ b/JobScraper.Web/wwwroot/app.css
@@ -97,6 +97,7 @@ th {
     #table-container {
         max-height: none;
         overflow-y: visible;
+        margin-bottom: 0;
     }
 }
 
